# AuctionTest

./: .env-example  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
src/: main.py
src/api/: __init__.py  lots.py  ws.py
src/core/: asgi.py  conf.py  db.py  exceptions.py  log.py
src/migrations/: env.py
src/migrations/versions/: 97d35ec4dfb0_init.py
src/models/: base.py  lots.py
src/repositories/: base.py  lots.py
src/schemas/: lots.py
src/services/: lots.py  ws_manager.py
